# clawaudit

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CHAT_DESIGN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SKILL.md  alembic.ini  pyproject.toml  requirements-dev.txt  results-before.txt  sentinel_pyproject.toml  skills-before.txt  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  test.yml
backend/: config.py  database.py  main.py
backend/api/: schemas.py
backend/api/routes/: chat.py  findings.py  graph.py  hooks.py  lifecycle.py  policies.py  remediation.py  scans.py  skills.py  ws.py
backend/engine/: advanced_detection.py  audit_engine.py  chat_engine.py  knowledge_graph.py  risk_scoring.py  scan_manager.py
backend/middleware/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 0002_add_remediation_events.py  0003_add_skill_installs_audit.py  0004_add_content_hash_to_skills.py  0005_add_tool_events.py  0ae4843244bc_initial_schema.py
backend/models/: chat.py  finding.py  policy.py  remediation.py  scan.py  skill.py
backend/seeds/: starter_policies.py
backend/storage/: repository.py
blog/: additional-outputs.md  linkedin-article.md  medium-deep-dive.md
clawaudit/: INSTALL.md  SKILL.md
clawaudit/detectors/: secret-patterns.md
data/: hardening-rules.yaml
detectors/: injection-patterns.md  secret-patterns.md
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init.sql
docs/: architecture.md  chat-investigation.md  ci-cd.md  quickstart.md  risk-scoring.md  setup.md
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: auth.spec.ts  clawaudit.spec.ts  dashboard-investigation.spec.ts  findings.spec.ts  hooks.spec.ts  policies.spec.ts  remediation.spec.ts  skills.spec.ts  smoke.spec.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: ConfirmDialog.tsx  InvestigationPanel.tsx  QuarantineBadge.tsx  RiskBadge.tsx  ScoreGauge.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/test-results/: .last-run.json
frontend/test-results/auth-API-Authentication-40-01054-banners-not-silent-failures-chromium-retry1/: error-context.md
frontend/test-results/clawaudit-Error-and-empty--47f9a--fails-not-empty-state-too--chromium/: error-context.md
references/: domains.md  report-template.md  scoring.md
sentinel/: __init__.py  config.py  main.py
sentinel/alerts/: __init__.py  engine.py  formatters.py
sentinel/alerts/channels/: __init__.py  file.py  openclaw.py  webhook.py
sentinel/analyzer/: __init__.py  config_auditor.py  injection_detector.py  script_scanner.py  secret_scanner.py  skill_analyzer.py
sentinel/api/: __init__.py  models.py  server.py
sentinel/api/routes/: alerts.py  findings.py  policies.py  skills.py
sentinel/collector/: __init__.py  config_collector.py  cron_collector.py  log_collector.py  session_collector.py  skill_collector.py
sentinel/guard/: __init__.py  command_guard.py
sentinel/hooks/: __init__.py  bus.py  event.py  plugin.py  rules.py  store.py
sentinel/lifecycle/: __init__.py  installer.py  registry.py  toggler.py  uninstaller.py
sentinel/models/: __init__.py  event.py  finding.py  policy.py  skill.py
sentinel/policies/: default.yaml
sentinel/policy/: actions.py  engine.py  loader.py  sync.py
sentinel/remediation/: __init__.py  actions.py  engine.py  rollback.py
sentinel/remediation/strategies/: __init__.py  config_patch.py  secrets.py  (+2 more)
sentinel/reporter/: __init__.py  compliance.py  delta.py  renderer.py
tests/: conftest.py
tests/backend/: conftest.py  test_advanced_detection.py  test_api_chat_v2.py  test_api_findings.py  test_api_findings_v2.py  test_api_graph.py  test_api_hooks.py  test_api_lifecycle.py  test_api_policies.py  test_api_policies_v2.py  test_api_remediation.py  test_api_scans.py  test_api_scans_v2.py  test_api_skills.py  test_api_skills_v2.py  test_api_ws_v2.py  test_audit_engine.py  test_chat_engine.py  test_hooks_hardening.py  test_knowledge_graph.py  test_repository.py  test_risk_scoring.py  test_scan_manager.py  test_websocket.py
tests/functional/: test_cli_functional.py  test_config_cli.py  test_cross_references.py  test_domain_coverage.py  test_hooks_cli.py  test_lifecycle_cli.py  test_remediation_cli.py  test_report_template.py  test_sentinel_policy_coverage.py  test_skills_verify_cli.py  test_start_stop_functional.py
tests/integration/: test_alert_pipeline.py  test_cli_integration.py  test_collector_pipeline.py  test_full_audit_pipeline.py  test_full_consistency.py  test_hooks_pipeline.py  test_lifecycle_pipeline.py  test_policy_enforcement_pipeline.py  test_policy_sync.py  test_regression.py  test_remediation_pipeline.py  test_security_hardening.py  test_start_stop_integration.py
tests/unit/: test_alert_channels.py  test_alert_engine.py  test_alert_formatters.py  test_api.py  test_auth_middleware.py  test_cli_quickstart.py  test_command_guard.py  test_config.py  test_config_auditor.py  test_config_patch_strategy.py  test_cron_collector.py  test_frontmatter.py  test_hardening_rules.py  test_hook_bus.py  test_hook_event.py  test_hook_hmac.py  test_hook_plugin.py  test_hook_rules.py  test_hook_store.py  test_injection_detector.py  test_lifecycle_installer.py  test_lifecycle_registry.py  test_lifecycle_toggler.py  test_lifecycle_uninstaller.py  test_log_collector.py  test_models.py  test_openclaw_channel.py  test_patterns.py  test_policy_actions.py  test_policy_actions_extended.py  test_policy_engine.py  test_policy_loader.py  test_policy_sync_service.py  test_policy_tool_call_evaluator.py  test_policy_violation_findings.py  test_remediation_actions.py  test_remediation_engine_expanded.py  test_remediation_rollback.py  test_remediation_strategies.py  test_reporter.py  (+13 more)
(+12 files in other folders)
