[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clawaudit-tests"
version = "1.0.0"
description = "Test suite for the ClawAudit OpenClaw security compliance skill"
requires-python = ">=3.10"
# No runtime dependencies — the skill itself is pure markdown/YAML.
# Test dependencies are in requirements-dev.txt.
dependencies = []

[project.optional-dependencies]
sentinel-dev = [
    "pytest-asyncio>=0.23.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
sentinel = "sentinel.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: fast, isolated tests for a single file or component",
    "functional: multi-file behavioural and cross-reference tests",
    "integration: full-repository consistency and regression tests",
    "asyncio: mark async tests (handled by pytest-asyncio)",
    "sentinel: sentinel platform tests",
]
# To stop on the first failure run: pytest -x tests/integration/
# (not in addopts — most workflows benefit from seeing all failures at once)

[tool.coverage.run]
# source=["tests"] measures how thoroughly the test files themselves are exercised
# (i.e. every branch and helper in conftest.py / test_*.py is reachable).
# This is the correct target: the skill has no Python source to cover.
source = ["tests"]
omit = [
    "tests/__init__.py",
    "tests/unit/__init__.py",
    "tests/functional/__init__.py",
    "tests/integration/__init__.py",
]

[tool.coverage.report]
show_missing = true
# 80 % line coverage is the minimum for the test suite itself to be well-tested.
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
