[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawaudit-sentinel"
version = "1.0.0"
description = "Real-time security monitoring and policy enforcement for OpenClaw deployments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClawAudit Sentinel", email = "sentinel@clawaudit.dev" }]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sentinel = "sentinel.main:app"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[project.optional-dependencies]
sentinel-dev = [
    "pytest-asyncio>=0.23.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
sentinel = "sentinel.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: fast, isolated tests for a single file or component",
    "functional: multi-file behavioural and cross-reference tests",
    "integration: full-repository consistency and regression tests",
    "asyncio: mark async tests (handled by pytest-asyncio)",
    "sentinel: sentinel platform tests",
]

[tool.coverage.run]
source = ["sentinel", "tests"]
omit = [
    "tests/__init__.py",
    "tests/unit/__init__.py",
    "tests/functional/__init__.py",
    "tests/integration/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"
