[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawaudit-sentinel"
version = "1.0.0"
description = "Real-time security monitoring and policy enforcement for OpenClaw deployments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClawAudit Sentinel", email = "sentinel@clawaudit.dev" }]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sentinel = "sentinel.main:app"
clawaudit-api = "backend.main:start"

[tool.hatch.build.targets.wheel]
packages = ["sentinel", "backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: fast, isolated tests for a single file or component",
    "functional: multi-file behavioural and cross-reference tests",
    "integration: full-repository consistency and regression tests",
    "asyncio: mark async tests (handled by pytest-asyncio)",
    "sentinel: sentinel platform tests",
    "backend: backend API and database tests",
]

[tool.coverage.run]
source = ["sentinel", "tests"]
omit = [
    "tests/__init__.py",
    "tests/unit/__init__.py",
    "tests/functional/__init__.py",
    "tests/integration/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"
